webhook.epapyrus.com/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhookepapyruscom
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    service: webhook.epapyrus.com
