webhook.epapyrus.com/webhook-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhookepapyruscom
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    service: webhook.epapyrus.com
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webhookepapyruscom
spec:
  serviceName: webhookepapyruscom
  replicas: 1
  selector:
    matchLabels:
      service: webhook.epapyrus.com
  template:
    metadata:
      labels:
        service: webhook.epapyrus.com
    spec:
      containers:
        - name: webhook-server
          image: 730490031339.dkr.ecr.ap-northeast-2.amazonaws.com/utils:webhook-server
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
        - name: mariadb
          image: mariadb:latest
          args:
            - --character-set-server=utf8
            - --collation-server=utf8_general_ci
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
              subPath: ./mariadb
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs
        resources:
          requests:
            storage: 2Gi
